--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-VITE_API_URL="https://sidhhivinayak-backend.vercel.app"
+VITE_API_URL="https://sidhhivinayak-2tizfokt6-amsp604-gmailcoms-projects.vercel.app/"
