--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,12 +1,12 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "vite.config.ts",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist"
-        }
-      }
-    ]
-  }
+  "builds": [
+    {
+      "src": "vite.config.ts",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
+    }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/" }
+  ]
+}
