--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes": [
       {
-        "src": "/(.*)",
-        "dest": "/index.html"
+        "src": "/api/(.*)",
+        "dest": "app/main.py"
       }
     ]
   }
