--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.115.5
-uvicorn==0.32.1
-python-dotenv==1.0.1
-fastapi-mail==1.4.1
-pydantic[email]==2.10.1
-python-multipart==0.0.9 
-mangum==0.10.0
+fastapi==0.98.0
+uvicorn==0.22.0
+python-dotenv==1.0.0
+fastapi-mail==1.3.1
+pydantic[email]==1.10.11
+python-multipart==0.0.6
+mangum==0.17.0
+email-validator==2.0.0.post2
