--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,9 @@
-fastapi==0.98.0
+fastapi==0.95.2
 uvicorn==0.22.0
 python-dotenv==1.0.0
-fastapi-mail==1.3.1
-pydantic[email]==1.10.11
+fastapi-mail==1.2.8
+pydantic==1.10.7
 python-multipart==0.0.6
 mangum==0.17.0
-email-validator==2.0.0.post2
+email-validator==1.3.1
+aiosmtplib==2.0.1
