--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,12 +9,8 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "app/main.py"
+        "dest": "/index.html"
       }
-    ],
-    "env": {
-        "MAIL_USERNAME": "amsp604@gmail.com",
-        "MAIL_PASSWORD": "iwyrfxmnssfkagfq",
-        "MAIL_FROM": "amsp604@gmail.com"
-    }
+    ]
   }
+  
