Initial commit for Jaksh AutoHub

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "siddhivinayak-auto-world",
+  "name": "Jaksh-auto-world",
   "private": true,
   "version": "0.0.0",
   "type": "module",
